# CMake-Scripts-3rd-Party

./: .gitignore  .gitmodules  README.md
sqlite/: CMakeLists.txt
